# openspec-vscode

./: .eslintrc.js  .gitignore  .vscodeignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TROUBLESHOOTING.md  package-lock.json  package.json  ralph_opencode.mjs  ralph_opencode.sh  tsconfig.json  tsconfig.test.json
.memory/2026-02-05/: chat-new-chat-and-acp-spawn.md
.opencode/: opencode.json  opencode.jsonc
media/: chat.css  chat.html  chat.js  highlight-languages.js  highlight.css  script.js  styles.css
opencode-openspec/src/utils/: workspace.js
openspec/: project.md
src/: extension.ts
src/constants/: commands.ts
src/extension/: activate.ts  commands.ts  deactivate.ts  runtime.ts  serverStatusIndicator.ts  watcher.ts
src/providers/: chatProvider.ts  chatViewProvider.ts  explorerProvider.ts  webviewProvider.ts
src/services/: acpClient.ts  acpClientCapabilities.ts  acpTransport.ts  acpTypes.ts  portManager.ts  ralphService.ts  serverLifecycle.ts  sessionManager.ts
src/types/: index.ts
src/utils/: cache.ts  errorHandler.ts  workspace.ts
test/: runTest.js  runTest.ts
test/suite/: acpClient.test.ts  chatFlow.test.ts  commandIntegration.test.ts  errorScenarios.test.ts  extension.test.js  extension.test.ts  portManager.test.ts  ralphRunner.test.ts  serverIntegration.test.ts  serverLifecycle.test.ts  sessionManager.test.ts  sessionPersistence.test.ts  streaming.test.ts  webview.test.ts  workspace.test.js  workspace.test.ts
testingproject/examples/pokedex-rust/: Cargo.toml
testingproject/examples/pokedex-rust/src/: main.rs
(+96 files in other folders)
