[package]
name = "pokedex-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["fs", "macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
directories = "5.0"
